# zkverify-rs

./: Cargo.toml  README.md
examples/: proof.json  vkey.json
src/: main.rs  parser.rs  verifier.rs
