[package]
name = "zkverify-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zkverify-rs"
path = "src/main.rs"

[[bin]]
name = "generate_test_proof"
path = "src/bin/generate_test_proof.rs"

[dependencies]
ark-groth16 = { version = "0.4", features = ["parallel"] }
ark-bn254 = "0.4"
ark-serialize = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-std = "0.4"
ark-relations = "0.4"
ark-snark = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
